--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -442,7 +442,7 @@ line-height: .34rem;height:.34rem;}
 .mtips {position:relative;}
 .h-home-top a:nth-of-type(1) span,.mtips span{position:absolute;right:-8px;width:6px;height:6px;border-radius: 3px;background: #fff;top:1px; opacity: 0;}
 .mtips span{background: red;}
-.opci{-webkit-animation:opaci .5s infinite linear;animation:opaci .5s infinite linear;}
+.opci{-webkit-animation:opaci 1.5s infinite linear;animation:opaci 1.5s infinite linear;}
 @-webkit-keyframes opaci{
 	100%{opacity:1;}
 }
