--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -70,7 +70,8 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .markslider{overflow: hidden;}
 /*注册--上传名片--start*/
 .uploadbox{/*display:flex;flex-direction:column;justify-content:center;align-items: center;*//*border-bottom:1px #c8c7cc solid;*/padding:0.62rem 0.8rem;}
-.uploadbox .imgcard{display:block;background:#9ba4ad;width:100%;min-height:3.11rem;}
+.uploadbox .imgcard{display:block;background:#9ba4ad;width:100%;max-height:8rem;overflow:hidden;}
+.upload_pic{width:100%;height:auto;max-height:8rem;overflow:hidden;}
 .uploadbox .imgcard img{ width:100%;height:auto;display: block;}
 .uploadbox .uploadbtn{display: block; color:#fff;font-size:0.3rem;text-align:center;width:100%;height:0.78rem;line-height:0.78rem;background: #3e82f7;border-radius: 0.2rem;margin:0.45rem 0 0.2rem;box-shadow: 0 0 0.3rem rgba(0,0,0,0.5);}
 .uploadbox  p{width:100%;text-align:center;font-size:0.28rem;color:#222c38;line-height: 0.46rem;}
@@ -1008,7 +1009,7 @@ background-size:3.82rem 1.9rem;margin-top:1rem;}
 .s-label{width:100%;height:3rem;overflow:hidden;padding:0 0.3rem;margin-top:0.2rem;transform: translateY(10px);}
 .s-label li{float:left;margin-right:0.13rem;width:23%;margin-bottom:0.4rem;overflow: hidden;}
 .s-label li a{display:block;height:34px;line-height: 34px;text-align:center;border:1px #969fa9 solid;font-size:14px;border-radius: 3px;color:#969fa9;padding:0 0.02rem;}
-.scroller{width:100%;height:100%;}
+.scroller{width:100%;height:8rem;}
 .loginbtn{height:40px;line-height: 38px;width:4rem;text-align: center;color:#fff;box-shadow: 0 0 1px rgba(255,255,255,.8);background:rgba(0,0,0,.3);position:absolute;margin:auto;top:30%;left:50%;margin-left:-2rem;
 font-size:16px;border-radius: 3px;border:1px #fff solid;}
 .s-label li .active{border:1px #e01b49 solid;color:#e01b49;}
