--- a/webroot/mobile/css/common.css
+++ b/webroot/mobile/css/common.css
@@ -48,10 +48,18 @@ textarea::-webkit-scrollbar{display: none;}/*隐藏多文本框滚动条*/
 .wraper .tr{text-align: right;}
 .wraper .tc{text-align:center;}
 .wraper .mt1{margin-top:-1px;}
+.wraper .mb20{margin-bottom:.2rem;}
 .wraper .green{color:#80c269;}
 .hf20{height:0.2rem;background: #fff;border-bottom:1px #e5e5e5 solid;}
 .wraper .texthide{word-break: break-all;display: -webkit-box;/*-webkit-line-clamp: 3;限制行数*/-webkit-box-orient: vertical;overflow: hidden;}
-
+/*限制一行*/
+.line1,.line2,.line3{word-break: break-all;display: -webkit-box;-webkit-box-orient: vertical;-webkit-box-orient: vertical;overflow: hidden;}
+/*一行*/
+.line1{-webkit-line-clamp: 1;}
+/*二行*/
+.line2{-webkit-line-clamp: 2;}
+/*三行*/
+.line3{-webkit-line-clamp: 3;}
 /*1px border*/
   .bd1,.bd2,.ld1,.rd1{position:relative;}
 .bd1:after{width:200%;height:1px;position:absolute;bottom:0;left:0;z-index:0;content:"";-webkit-transform:scale(0.5);-webkit-transform-origin:0 0;transform:scale(0.5);/*transform-origin:0 0;*/background: #e5e5e5;}
