--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -431,7 +431,7 @@ line-height: .34rem;height:.34rem;}
 .m-to-more{position:absolute;height:4rem;/*background: url(img/tomore.png) center center no-repeat;*//*background-size: cover;*/width:100%;max-width: 750px;}
 .pic-expert{height:4rem;width:100%;overflow:hidden;}
 .pic-expert img{width:100%;height:auto;display: block;}
-.m-tomore-bottom{position:absolute;top:-0.21rem;background: rgba(255,255,255,1);color:#222c38;line-height:.42rem;height:0.42rem;/*-webkit-box-shadow:0 0 1px rgba(229,229,229,1);box-shadow: 0 0 1px rgba(229,229,229,1);border-radius: 0.5rem;*/padding:0 .05rem;text-align: center;left:50%;margin-left:-1.1rem;width:2.2rem;}
+.m-tomore-bottom{position:absolute;top:-0.21rem;background: rgba(255,255,255,1);color:#222c38;line-height:24px;height:26px;/*-webkit-box-shadow:0 0 1px rgba(229,229,229,1);box-shadow: 0 0 1px rgba(229,229,229,1);border-radius: 0.5rem;*/padding:0 .05rem;text-align: center;left:50%;margin-left:-1.1rem;width:2.2rem;}
 .m-tomore-bottom span{font-size:0.26rem;color:#222c38;}
 .m-tomore-bottom span i{margin-right:0.1rem;font-size:0.24rem;color:#535353;}
 .m-info-box{overflow:hidden;border-bottom:1px #e5e5e5 solid;border-top:1px #e5e5e5 solid; background: #fff;margin-top:4rem;margin-bottom:0.2rem;}
@@ -508,9 +508,9 @@ display: -webkit-box;-webkit-line-clamp: 1;}
 .d-list{margin:0 .3rem;}
 .d-list li{position:relative;margin-top:.6rem;background: #fff;padding:0.4rem;border-left:.08rem #ff5176 solid;box-shadow: 0 0.01rem 0.2rem rgba(255,81,118,.1); }
 .d-list li h3{line-height: .42rem;margin-bottom:.2rem;width:85%;word-break: break-all;overflow: hidden;}
-.d-list li span,.d-list li i:after{color:#e01a48;font-size:.26rem;}
-.d-list li i{position:absolute;right:0.2rem;top:45%;}
-.d-list li i:after{content: '\e662';}
+.d-list li span{color:#e01a48;font-size:.26rem;}
+.d-list li i{position:absolute;right:0.2rem;top:45%;font-size:.26rem;}
+.d-list li i{}
 .m-detail-box li{padding:0.25rem 0.3rem;border-bottom:1px solid #e5e5e5;display:-webkit-flex;display: flex; -webkit-justify-content:space-between;justify-content:space-between;font-size:0.3rem;line-height: .32rem;}
 .m-detail li{padding:0.25rem 0.3rem;border-bottom:1px solid #e5e5e5;font-size:0.3rem;}
 .sub-list-l{width:75%;}
@@ -674,7 +674,7 @@ border-radius: 50%;}
 .h-home-menu{/*display:-webkit-box;display:-webkit-flex;display:flex;-webkit-flex-wrap: wrap;flex-wrap: wrap;*/background: #fff;border-bottom:1px #e5e5e5 solid;margin-bottom:0.2rem;overflow:hidden;/*向下兼容*/}
 .typeselect,.c-select{width:1rem;overflow: hidden;}
 .typeselect select,.c-select select{width:1.3rem;border:none;padding-left:0.5rem;}
-.c-select select{width:1.5rem;padding-left:0;}
+.c-select select{width:1.5rem;padding-left:.24rem;font-size:.3rem;}
 .h-home-menu li{width:50%; padding:0.4rem 0 0.4rem 1rem;border:1px #e5e5e5 solid;border-bottom:none;border-right:none;float:left;/*向下兼容*/height:1rem;}
 .topnav li{width:33.3%;padding:0.3rem 0.2rem;height:1.5rem;}
 .topnav li a{display:block;text-align: center;}
@@ -725,7 +725,7 @@ border-radius: 50%;}
 .m_sub_items a{color:#fff;}
 .m-sub-con-h,.m-sub-con-c{padding:.15rem;}
 .m-sub-con-h{position:relative;}
-.m-sub-con-h span{position:absolute;right:.15rem;top:.2rem;font-size:.34rem;max-width:10%;height:.34rem;}
+.m-sub-con-h span{position:absolute;right:.15rem;top:.25rem;font-size:.42rem;max-width:10%;}
 .m-sub-con-c p{line-height: .42rem;}
 .m-sub-con-h h3{font-weight: bold;line-height:.4rem;font-size:.3rem;font-weight: 800;max-width:90%;}
 .m_right_btn span,.m_edit_items{width:1.5rem;display:block;text-align:center;color:#fff;border-radius: .3rem;-webkit-box-shadow: 0 2px 5px rgba(255,75,112,.2);box-shadow: 0 2px 5px rgba(255,75,112,.2);height:28px;font-size:12px;line-height: 28px;}
@@ -748,7 +748,7 @@ border-left:1px #e5e5e5 solid;width:50%;}
 .m-lilist-des{overflow:hidden;}
 .m-lilist-des li span{font-size:.26rem;color:#222c38;display:block;width:90%;margin:0 auto;word-break: break-all;}
 .pos-top{position:absolute;z-index:99;}
-.m-commond-list{overflow: hidden;border-bottom:1px #e5e5e5 solid;padding:.1rem 0;}
+.m-commond-list{overflow: hidden;border-bottom:1px #e5e5e5 solid;padding:.2rem 0 0;}
 .m-commond-list span{color:#808080;font-size:.3rem;line-height: .96rem;text-indent:.03rem;}
 .m-commond-list span i{margin-right: .2rem;font-size: .26rem;}
 .m-commond-list .hover{color:#e01b49;}
@@ -814,7 +814,7 @@ margin-top:.1rem;}
 .education-items{background: #fff;border-top:1px #e5e5e5 solid;}
 .edit-education-bottom .education-title{line-height: 0.79rem;font-size:0.28rem;color:#d3265b; padding:0 0.3rem;}}
 .edit-education-bottom h3{width:100%;}
-.edit-education-bottom h3 a{float:right;color:#3e82f7}
+.edit-education-bottom h3 a{color:#3e82f7;padding-right: .3rem;}
 .edit-education-bottom li.textareabox{flex-direction: column;}
 /*.edit-education-bottom li:last-of-type span,.edit-education-bottom li:last-of-type .edit-textarea{width:100%; margin-bottom:0.2rem;margin-top:0.1rem;}*/
 .bbottom .orgtitle .orgname{background: none;}
