--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -109,10 +109,6 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .a-banner .yd span{width:.1rem;height:.1rem;border-radius: 50%;background: #929292;display: inline-block;margin:0 0.05rem;}
 .a-banner .yd span.cur{background: #fff;}
 .news-list-items{border-bottom:1px #e5e5e5 solid;padding:0.16rem 0.3rem;background: #fff;overflow:hidden;/*position:relative;*/}
-/*.tbof:before{content:'';position:absolute;border-top:1px #e5e5e5 solid;left:0;right:0;top:0;height:1px;
--webkit-transform:scaleY(.5);transform:scaleY(.5);-webkit-transform-origin:0 0;transform-origin:0 0;}*/
-/*.news-list-items:last-of-type{border-bottom:1px #e5e5e5 solid;}*/
-/*#activity{border-bottom:1px #e5e5e5 solid;}*/
 .news-list-items:last-of-type .active-items{border-bottom:none;}
 .news-list-items time,.con-des time{margin-left:20px;color:#969fa9;font-size:0.26rem;line-height: 0.4rem;}
 .news-list-items h1,.con-des{width:100%;color:#969fa9;font-size:0.28rem;line-height: 0.5rem;position:relative;padding-left:0.7rem;height:0.52rem;}
@@ -131,7 +127,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .newsbox .sec-news-l{float:left;width:5rem;}
 /*超出隐藏*/
 .newsbox .sec-news-l h3,.newsbox .sec-news-l p,.newscon-box h3{word-break: break-all;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;overflow: hidden;}
-.newsbox .sec-news-l h3{line-height: 0.4rem;margin:0.1rem 0;font-size:0.32rem;color:#222c38;font-weight: 400;-webkit-line-clamp: 2;}
+.newsbox .sec-news-l h3{line-height: 0.4rem;margin:0.1rem 0;font-size:0.34rem;color:#222c38;-webkit-line-clamp: 2;font-weight:600;}
 .newsbox .sec-news-l p{line-height:0.38rem;font-size:0.28rem;-webkit-line-clamp: 2;}
 .newsbox .sec-news-r{float:right;width:1.6rem;height:1.6rem;margin-top:0.14rem;overflow:hidden;}
 .newsbox .sec-news-r img{width:100%;display: block;min-height:1.6rem;}
@@ -250,7 +246,7 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 .status{position:absolute;right:-30px;top:0;}
 .status span{display:block;background: #e01a48;width:100px;height:32px;border-radius: 0.5rem;line-height:32px;color:#fff;padding-left:15px;font-size:14px;margin-top:20px;}
 .a-head img{width:100%;height:auto;display: block;}
-.a-head h3{line-height: 0.4rem; color:#222c38;font-size:0.3rem;margin:0.2rem 0;-webkit-line-clamp: 2;}
+.a-head h3{line-height: 0.4rem; color:#222c38;font-size:0.32rem;margin:0.2rem 0;-webkit-line-clamp: 2;font-weight:600;}
 .a-bottom .a-address{line-height: 0.28rem; display: block;font-size:0.28rem;color:#9ba4ad;margin-bottom:0.2rem;}
 .a-other-info{color:#9ba4ad;}
 .is-apply{color:red;float:right;}
@@ -388,7 +384,7 @@ background-size: 0.16rem 0.25rem;width:5%;height:100%;}
 .morebtn{display: block;background: url(img/right.png) no-repeat;background-size:cover;width:0.15rem;height:0.22rem;align-self: center;}
 .internet-v-info{margin-bottom:0.2rem;border-bottom:1px #e5e5e5 solid;border-top:1px #e5e5e5 solid;padding:0.2rem 0;background: #fff;color:#969fa9;}
 .internet-v-info .head-img{width:1.21rem;height:1.21rem;display: block;border-radius: 50%;position:relative;margin-right:0.3rem;float:left;}
-.head-img img{width:100%;height:auto;border-radius: 50%;}
+.head-img img{width:100%;height:100%;border-radius: 50%;}
 .head-img i{position: absolute;right:0.12rem;bottom:0;width:0.29rem;height:0.3rem;background: url(img/v.png) no-repeat;background-size: contain;}
 .mark{margin-top:0.1rem;}
 .vipinfo{width:5.3rem;float:left;}
@@ -439,8 +435,10 @@ line-height: .34rem;height:.34rem;}
 .m-info-box li em{margin-left:0.2rem;font-size:0.3rem;font-weight:500;color:#808080;}
 .h-home-top{width:100%;position:relative;height:0.4rem;line-height: 0.4rem;}
 .h-home-top h1{text-align: center;}
-.h-home-top a:nth-of-type(1){position:absolute;left:0.3rem;top:0;vertical-align: middle;}
+.h-home-top a:nth-of-type(1){position:absolute;left:0.2rem;top:0;vertical-align: middle;}
+.h-home-top a{padding:.1rem;}
 .mtips {position:relative;}
+
 .h-home-top a:nth-of-type(1) span,.mtips span{position:absolute;right:-8px;width:6px;height:6px;border-radius: 3px;background: #fff;top:1px; opacity: 0;}
 .mtips span{background: red;}
 .opci{-webkit-animation:opaci 1.5s infinite linear;animation:opaci 1.5s infinite linear;}
@@ -450,8 +448,9 @@ line-height: .34rem;height:.34rem;}
 @keyframes opaci{
 	100%{opacity:1;}
 }
-.h-home-top a:nth-of-type(2){position:absolute;right:0.3rem;top:0;vertical-align: middle;}
+.h-home-top a:nth-of-type(2){position:absolute;right:0.2rem;top:0;vertical-align: middle;padding:.1rem;}
 .commendnum{width:85%;}
+.h-home-top .share{position:relative;}
 .m-info-box li:last-child{border-bottom:none;}
 .conr{background: url(img/right.png) right center no-repeat;background-size:0.16rem 0.25rem;}
 .m-info-box li h3{font-size:0.32rem;color:#222c38;line-height: 0.4rem;font-weight:600;}
@@ -644,7 +643,7 @@ background: url(img/mbg.jpg) repeat-x;background-size: contain;}
 /*个人中心--2end*/
 .myhome,.myhome-h{background: #dd204b;position:fixed;}
 .myhome-h{height:3.6rem;}
-.h-home-bottom{padding:0.4rem 0 0.2rem;
+.h-home-bottom{padding:0.3rem 0 0.2rem;
 /*display: -webkit-flex; display: flex;
 -webkit-justify-content: center;justify-content: center;
 -webkit-align-items: center;  align-items: center;
@@ -755,7 +754,7 @@ border-left:1px #e5e5e5 solid;width:50%;}
 .m-commond-list p{padding-top:.26rem;padding-left: .6rem;}
 .m-commond-list p img{margin-right: .1rem;width: .42rem;height: .42rem;border-radius: 50%;}
 /*个人主页*/
-.h-info-box,.book-info-box{background: #fff;border-top:1px #e5e5e5 solid;border-bottom:1px #e5e5e5 solid; padding:0 0.3rem; margin-top:0.2rem;}
+.h-info-box,.book-info-box{background: #fff;border-top:1px #e5e5e5 solid;border-bottom:1px #e5e5e5 solid; padding:0 0.3rem;}
 .h-info-box a{color:#222c38;}
 .s-title-pass{padding:0;}
 .h-info-box li{line-height:0.4rem;border-bottom:1px #e5e5e5 solid;font-size:0.3rem;padding:.2rem 0;}
@@ -815,6 +814,7 @@ margin-top:.1rem;}
 .edit-education-bottom .education-title{line-height: 0.79rem;font-size:0.28rem;color:#d3265b; padding:0 0.3rem;}}
 .edit-education-bottom h3{width:100%;}
 .edit-education-bottom h3 a{color:#3e82f7;padding-right: .3rem;}
+.edit-education-bottom .deletbtn{padding-right: 0;font-size: .3rem;color: darkgray;vertical-align: top;margin-left:-.2rem;}
 .edit-education-bottom li.textareabox{flex-direction: column;}
 /*.edit-education-bottom li:last-of-type span,.edit-education-bottom li:last-of-type .edit-textarea{width:100%; margin-bottom:0.2rem;margin-top:0.1rem;}*/
 .bbottom .orgtitle .orgname{background: none;}
@@ -1078,6 +1078,7 @@ width:0.5rem;height:0.16rem;display: inline-block;transition: all .3s;float:righ
 .a-s-mark{background: #f5f5f5;padding:0 0.3rem;overflow: hidden;border-bottom:1px #e5e5e5 solid;border-top:1px #e5e5e5 solid;max-height:999px;-webkit-transition:max-height .5s ease;transition:max-height .5s ease;}
 .a-s-width{max-height: 0;overflow:hidden;-webkit-transition:max-height .5s ease;transition:max-height .5s ease;}
 .a-s-mark li{float: left;width:49%;margin:0.2rem 0;margin-right: 0.1rem;height:.68rem;line-height: .66rem;text-align: center;}
+.news_s_mark li{width:24%;}
 .a-s-mark li:nth-of-type(2n){margin-right: 0;}
 .a-s-mark li a{display: block;background: #fff;color:#676767;}
 .a-s-mark li a.active{background: #e01a48;color:#fff;}
