--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -824,7 +824,7 @@ margin-top:.1rem;}
 header h1 a{margin-right:0.38rem; padding-bottom:0.16rem;overflow:hidden;color:#eca9b7;}
 header h1 a:nth-of-type(2){margin-left:0.38rem;color:#eca9b7;margin-right: 0; }
 header h1 a.active{border-bottom:0.04rem #fff solid;color:#fff;}
-.my-focus-box{height:0.8rem;border:1px #c8c7cc solid;border-left:none;border-right:none;}
+.my-focus-box{height:0.8rem;border:1px #e5e5e5 solid;border-left:none;border-right:none;}
 .my-focus-box .my-search{background: #fff;width:100%;height:100%;display: flex;align-items: center;padding:0 0.3rem;}
 .my-focus-box .my-search a{color:#898d91;height:100%;line-height: 0.8rem;}
 .my-focus-box .my-search h1{width:100%;}
@@ -834,7 +834,7 @@ header h1 a.active{border-bottom:0.04rem #fff solid;color:#fff;}
 .my-search h1 input::-moz-placeholder { /* Mozilla Firefox 19+ */ color:#afafaf; } 
 .my-search h1 input::-ms-input-placeholder { /* Internet Explorer 10+ */ color:#afafaf; } 
 .my-search-mark .items .orgname{background: none;}
-.vipinfo .mark .meetnum{float:right;}
+.vipinfo .mark .meetnum{float:right;line-height: .4rem;}
 .my-search h3{height:0.8rem;background: #fff;line-height: 0.8rem;font-size:0.28rem;text-indent: 0.3rem;}
 .my-home-menu{overflow:hidden;/*display: flex; justify-content: center;align-items: center;*/font-size:0;}
 .my-home-menu a,.my-home-menu span{width:50%;border:1px #e01a48 solid;line-height: 0.58rem;text-align: center;color:#e01a48;display:inline-block;margin:0.2rem 0;font-size:0.28rem;height:0.6rem;}
@@ -901,7 +901,7 @@ header h1 a.active{border-bottom:0.04rem #fff solid;color:#fff;}
 .installbox{margin-bottom:0;border-bottom:none;}
 .bottom-logo h3{width:1.78rem;height:0.61rem;margin:0 auto;}
 .bottom-logo h3 img{width:100%;height:auto;display: block;}
-.bottom-logo{width:100%;margin-top:1rem;margin-bottom:1rem;}
+.bottom-logo{width:100%;margin-top:.8rem;margin-bottom:.8rem;}
 .bottom-logo p{text-align: center;}
 .bottom-logo p:nth-of-type(1){font-size:0.28rem;margin:0.2rem 0 0.34rem;color:#222c38;}
 .bottom-logo p a{color:#222c38;}
