--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -673,7 +673,7 @@ border-radius: 50%;}
 .h-home-menu{/*display:-webkit-box;display:-webkit-flex;display:flex;-webkit-flex-wrap: wrap;flex-wrap: wrap;*/background: #fff;border-bottom:1px #e5e5e5 solid;margin-bottom:0.2rem;overflow:hidden;/*向下兼容*/}
 .typeselect,.c-select{width:1rem;overflow: hidden;}
 .typeselect select,.c-select select{width:1.3rem;border:none;padding-left:0.5rem;}
-.c-select select{width:1.5rem;/*padding-left:.24rem;*/font-size:.3rem;}
+.c-select select{width:1.5rem;padding-left:0;font-size:.3rem;}
 .h-home-menu li{width:50%; padding:0.4rem 0 0.4rem 1rem;border:1px #e5e5e5 solid;border-bottom:none;border-right:none;float:left;/*向下兼容*/height:1rem;}
 .topnav li{width:33.3%;padding:0.3rem 0.2rem;height:1.5rem;}
 .topnav li a{display:block;text-align: center;}
