--- a/webroot/mobile/css/common.css
+++ b/webroot/mobile/css/common.css
@@ -53,7 +53,7 @@ textarea::-webkit-scrollbar{display: none;}/*隐藏多文本框滚动条*/
 .hf20{height:0.2rem;background: #fff;border-bottom:1px #e5e5e5 solid;}
 .wraper .texthide{word-break: break-all;display: -webkit-box;/*-webkit-line-clamp: 3;限制行数*/-webkit-box-orient: vertical;overflow: hidden;}
 /*限制一行*/
-.line1,.line2,.line3{word-break: break-all;display: -webkit-box;-webkit-box-orient: vertical;-webkit-box-orient: vertical;overflow: hidden;}
+.line1,.line2,.line3{word-break: break-all;display: -webkit-box;-webkit-box-orient: vertical;overflow: hidden;}
 /*一行*/
 .line1{-webkit-line-clamp: 1;}
 /*二行*/
