--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -386,7 +386,8 @@ background-size: 0.16rem 0.25rem;width:5%;height:100%;}
 .internet-v-info .head-img{width:1.21rem;height:1.21rem;display: block;border-radius: 50%;position:relative;margin-right:0.3rem;float:left;}
 .head-img img{width:100%;height:100%;border-radius: 50%;}
 .head-img i{position: absolute;right:0.12rem;bottom:0;width:0.29rem;height:0.3rem;background: url(img/v.png) no-repeat;background-size: contain;}
-.mark{margin-top:0.1rem;max-height:.94rem;overflow:hidden;}
+.mark,.s_mark_h{margin-top:0.1rem;max-height:.94rem;overflow:hidden;}
+.s_mark_h{max-height:.85rem;}
 .vipinfo{width:5.3rem;float:left;}
 .vipinfo h3{font-size:0.32rem;color:#222c38;height:.5rem;overflow:hidden;line-height: .5rem;}
 .vipinfo h3 .l-name{float:left;}
