--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -729,7 +729,7 @@ border-radius: 50%;}
 .m-sub-con-h span{position:absolute;right:.15rem;top:.25rem;font-size:.42rem;max-width:10%;}
 .m-sub-con-c p{line-height: .42rem;}
 .m-sub-con-h h3{font-weight: bold;line-height:.4rem;font-size:.3rem;font-weight: 800;max-width:90%;}
-.m_right_btn span,.m_edit_items{width:1.5rem;display:block;text-align:center;color:#fff;border-radius: .3rem;-webkit-box-shadow: 0 2px 5px rgba(255,75,112,.2);box-shadow: 0 2px 5px rgba(255,75,112,.2);height:28px;font-size:12px;line-height: 28px;}
+.m_right_btn span,.m_edit_items,.m_right_btn a{width:1.5rem;display:block;text-align:center;color:#fff;border-radius: .3rem;-webkit-box-shadow: 0 2px 5px rgba(255,75,112,.2);box-shadow: 0 2px 5px rgba(255,75,112,.2);height:28px;font-size:12px;line-height: 28px;}
 .m_right_btn .r-focus,.m_edit_items{line-height:24px;background: linear-gradient(top,#ff567b,#ff4b70);background: -webkit-linear-gradient(top,#ff567b,#ff4b70);border: 2px #fff solid;/*border:.04rem #fff solid;*/margin-bottom:.15rem;}
 .m_right_btn .g-card{border:1px #ff6283 solid; color:#ff6283;line-height:26px;}
 .m_right_btn .cardgray,.m_right_btn .focusgray{color:#7a7d82;border:1px solid #7a7d82;-webkit-box-shadow: 0 1px 1px rgba(255,75,112,.5);box-shadow: 0 1px 1px rgba(122,125,130,.5);}
