--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -68,6 +68,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .items .active:after{position:absolute;content:'';width:0.28rem;height:0.28rem;top:0;right:-0.14rem;background: url(img/choose.png) no-repeat; background-size:contain;}
 .myselfmark input{ width: 1.2rem; height: 0.4rem;border: none;line-height: 0.4rem; text-align: center;}
 .markslider{overflow: hidden;}
+.min_height{min-height: 4rem;background: #fff;}
 /*注册--上传名片--start*/
 .uploadbox{/*display:flex;flex-direction:column;justify-content:center;align-items: center;*//*border-bottom:1px #c8c7cc solid;*/padding:0.62rem 0.8rem;}
 .uploadbox .imgcard{display:block;background:#9ba4ad;width:100%;max-height:8rem;overflow:hidden;}
