--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -389,6 +389,7 @@ background-size: 0.16rem 0.25rem;width:5%;height:100%;}
 .head-img i{position: absolute;right:0.12rem;bottom:0;width:0.29rem;height:0.3rem;background: url(img/v.png) no-repeat;background-size: contain;}
 .mark,.s_mark_h{margin-top:0.1rem;max-height:50px;overflow:hidden;}
 .s_mark_h{max-height:50px;}
+
 /*.s_mark_h a{border:1px #969fa9 solid;}*/
 .vipinfo{width:5.3rem;float:left;}
 .vipinfo h3{font-size:0.32rem;color:#222c38;height:.5rem;overflow:hidden;line-height: .5rem;}
@@ -401,8 +402,7 @@ line-height: .34rem;height:.34rem;}
 .vipinfo span.job,.vipinfo span.c-info{line-height: 0.64rem;font-size:0.28rem;margin-top:0.06rem;color: #969fa9;}
 .vipinfo span.job{line-height: 0.4rem;}
 .vipinfo span.c-info{line-height: 0.3rem;display: block;}
-/*.vipinfo .mark a{border:1px #969fa9 solid;border-radius: 0.1rem;line-height: 0.32rem;font-size:0.26rem;color:#969fa9;padding:0 0.1rem;display:inline-block;margin-bottom:.1rem;}*/
-.vipinfo .mark a{border:1px #969fa9 solid;border-radius: 0.1rem;line-height: 20px;font-size:12px;color:#969fa9;padding:0 0.1rem;display:inline-block;margin-bottom:.1rem;}
+.vipinfo .mark a{border:1px #969fa9 solid;border-radius: 0.1rem;line-height: 20px;font-size:12px;color:#969fa9;padding:0 0.1rem;display:inline-block;margin-bottom:4px}
 .vipinfo .bgblue a{background: #4285f4;border:1px #4285f4 solid;color:#fff;border:none;display:inline-block;margin-bottom:5px;}
 .meetnum{font-size:0.28rem;color:#969fa9;}
 .f-info{border-top:1px #e5e5e5 solid;line-height: .86rem;overflow:hidden; font-size:.28rem;}
@@ -829,7 +829,8 @@ margin-top:.1rem;}
 header h1 a{margin-right:0.38rem; padding-bottom:0.16rem;overflow:hidden;color:#eca9b7;}
 header h1 a:nth-of-type(2){margin-left:0.38rem;color:#eca9b7;margin-right: 0; }
 header h1 a.active{border-bottom:0.04rem #fff solid;color:#fff;}
-.my-focus-box{height:0.8rem;border:1px #e5e5e5 solid;border-left:none;border-right:none;}
+/*我的关注搜索边框 overflow*/
+.my-focus-box{height:0.8rem;border:1px #e5e5e5 solid;border-left:none;border-right:none;overflow:hidden;}
 .my-focus-box .my-search{background: #fff;width:100%;height:100%;display: flex;align-items: center;padding:0 0.3rem;}
 .my-focus-box .my-search a{color:#898d91;height:100%;line-height: 0.8rem;}
 .my-focus-box .my-search h1{width:100%;}
