--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1015,7 +1015,7 @@ background-size:3.82rem 1.9rem;margin-top:1rem;}
 /*.tipsbtn:nth-of-type(1){background: gray;}
 .tipsbtn:nth-of-type(2){background: #E01A48;}*/
 .bgred{background: #e01a48;}
-.bgblue{background: #3f82f7;}
+.bg_blue{background: #3f82f7;}
 .bggray{background: #7a7e83;}
 .tips_con{margin-bottom:.1rem;}
 @media only screen and (min-width: 414px) {
