--- a/webroot/mobile/css/common.css
+++ b/webroot/mobile/css/common.css
@@ -97,6 +97,7 @@ textarea::-webkit-scrollbar{display: none;}/*隐藏多文本框滚动条*/
 .wraper .nopr{padding-right:0;}
 .wraper .nopd{padding-bottom:0;}
 .wraper .color-items{color:#e01a48;}
+.wraper .color-gray{color:#7A7E83;}
 .loading{width:1.27rem;height:0.31rem;background: url(img/loading.gif) center center; background-size:cover; margin:0 auto;}
 .loadingbox{width:100%;height:0.31rem;margin:0.2rem 0;font-size:0.28rem;color:#c8cbce;text-align: center;}
 .no-margin-b{padding-bottom:0;}
